@@ -146,7 +146,6 @@ TESTS = \
 	t/help.sh
 
 XFAIL_TESTS = \
-	t/cr-tag-table.sh \
 	t/quoted-label-as-target.sh \
 	t/quoted-target.sh \
 	t/quoted-label-and-target.sh \
